add latest section

--- a/index.html
+++ b/index.html
@@ -163,6 +163,8 @@
 
     <!-- main -->
      <main class="md:container mx-auto mt-28">
+      <!-- text  -->
+      
       <!-- 3 bike section container-->
        <div class="w-full flex-col mx-auto space-y-7 mb-20">
         <!-- top div text -->
@@ -172,14 +174,68 @@
          </div>
 
          <!-- bottom div 3 bike flex -->
-          <div class="flex lg:flex  justify-between flex-col lg:flex-row space-y-5">
+          <div class="flex lg:flex  justify-between flex-col lg:flex-row space-y-5 lg:px-28 px-5">
             <img src="images/others/feature-bike.png" alt="">
             <img src="images/others/feature-bike.png" alt="">
             <img src="images/others/feature-bike.png" alt="">
           </div>
        </div>
-     </main>
 
+
+
+       <!-- latest section -->
+ <!-- container card -->
+     <div class="grid lg:grid-cols-3 gap-8 mt-32 grid-cols-1 md:grid-cols-2 w-full mt-5">
+      
+      <!-- card1 -->
+      <div class="card bg-base-100 lg:w-96 shadow-xl w-full">
+        <figure>
+          <img
+            src="images/others/latest2.png"
+            alt="Shoes" />
+        </figure>
+        <div class="card-body">
+          <h2 class="card-title">Shoes!</h2>
+          <p>If a dog chews shoes whose shoes does he choose?</p>
+          <div class="card-actions">
+            <button class="btn bg-bike-primary text-white">Buy Now</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- card2 -->
+      <div class="card bg-base-100 lg:w-96 shadow-xl w-full">
+        <figure>
+          <img
+            src="images/others/latest3.png"
+            alt="Shoes" />
+        </figure>
+        <div class="card-body">
+          <h2 class="card-title">Shoes!</h2>
+          <p>If a dog chews shoes whose shoes does he choose?</p>
+          <div class="card-actions">
+            <button class="btn bg-bike-primary text-white">Buy Now</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- card3 -->
+      <div class="card bg-base-100 lg:w-96 shadow-xl w-full">
+        <figure>
+          <img
+            src="images/others/latest1.png"
+            alt="Shoes" />
+        </figure>
+        <div class="card-body">
+          <h2 class="card-title">Shoes!</h2>
+          <p>If a dog chews shoes whose shoes does he choose?</p>
+          <div class="card-actions">
+            <button class="btn bg-bike-primary text-white ">Buy Now</button>
+          </div>
+        </div>
+      </div>
+     </div>
+     </main>
 
     <!-- footer -->
      <footer></footer>
