happy clints section add and responsive

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
        <!-- latest section -->
  <!-- container card -->
-     <div class="grid lg:grid-cols-3 gap-8 mt-32 grid-cols-1 md:grid-cols-2 w-full mt-5">
+     <div class="grid lg:grid-cols-3 gap-8 mt-32 grid-cols-1 md:grid-cols-2 w-full -mt-14">
       
       <!-- card1 -->
       <div class="card bg-base-100 lg:w-96 shadow-xl w-full">
@@ -235,6 +235,110 @@
         </div>
       </div>
      </div>
+
+
+
+
+     <!-- Happy Clients says -->
+      <!-- container -->
+       <div class="flex flex-col lg:flex-col space-y-4 my-28">
+        <!-- text description -->
+        <h1 class="my-20 font-bold text-center text-5xl">Happy Clients says</h1>
+        <!-- card container -->
+         <div class="grid grid-cols-1 lg:grid-cols-3 gap-4 md:grid-cols-2">
+       <!-- card1 -->
+       <div class="card bg-base-100 lg:w-96 shadow-xl space-y-4 w-full">
+        <div class="avatar">
+          <div class="ring-primary ring-offset-base-100 w-24 rounded-full ring ring-offset-2 mx-auto">
+            <img src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" />
+          </div>
+        </div>
+        <div class="card-body items-center text-center">
+          <h2 class="card-title">Shoes!</h2>
+          <p>Slate helps you see how 
+            many more days you need 
+            to work to reach your financial 
+            goal for the month and year.</p>
+            <div class="rating">
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input
+                type="radio"
+                name="rating-2"
+                class="mask mask-star-2 bg-orange-400"
+                checked="checked" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+            </div>
+
+            <h2>Regina Miles</h2>
+            <small>Banker</small>
+        </div>
+      </div>
+
+       <!-- card2 -->
+       <div class="card bg-base-100 lg:w-96 shadow-xl space-y-4 w-full">
+        <div class="avatar">
+          <div class="ring-primary ring-offset-base-100 w-24 rounded-full ring ring-offset-2 mx-auto">
+            <img src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" />
+          </div>
+        </div>
+        <div class="card-body items-center text-center">
+          <h2 class="card-title">Shoes!</h2>
+          <p>Slate helps you see how 
+            many more days you need 
+            to work to reach your financial 
+            goal for the month and year.</p>
+            <div class="rating">
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input
+                type="radio"
+                name="rating-2"
+                class="mask mask-star-2 bg-orange-400"
+                checked="checked" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+            </div>
+
+            <h2>Regina Miles</h2>
+            <small>Banker</small>
+        </div>
+      </div>
+
+       <!-- card3 -->
+       <div class="card bg-base-100 lg:w-96 shadow-xl space-y-4 w-full">
+        <div class="avatar">
+          <div class="ring-primary ring-offset-base-100 w-24 rounded-full ring ring-offset-2 mx-auto">
+            <img src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" />
+          </div>
+        </div>
+        <div class="card-body items-center text-center">
+          <h2 class="card-title">Shoes!</h2>
+          <p>Slate helps you see how 
+            many more days you need 
+            to work to reach your financial 
+            goal for the month and year.</p>
+            <div class="rating">
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input
+                type="radio"
+                name="rating-2"
+                class="mask mask-star-2 bg-orange-400"
+                checked="checked" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+            </div>
+
+            <h2>Regina Miles</h2>
+            <small>Banker</small>
+        </div>
+      </div>
+         </div>
+
+
+       </div>
      </main>
 
     <!-- footer -->
