faq section done

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
        <div class="card bg-base-100 lg:w-96 shadow-xl space-y-4 w-full">
         <div class="avatar">
           <div class="ring-primary ring-offset-base-100 w-24 rounded-full ring ring-offset-2 mx-auto">
-            <img src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" />
+            <img src="images/others/user-1.png" />
           </div>
         </div>
         <div class="card-body items-center text-center">
@@ -280,7 +280,7 @@
        <div class="card bg-base-100 lg:w-96 shadow-xl space-y-4 w-full">
         <div class="avatar">
           <div class="ring-primary ring-offset-base-100 w-24 rounded-full ring ring-offset-2 mx-auto">
-            <img src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" />
+            <img src="images/others/user-2.png" />
           </div>
         </div>
         <div class="card-body items-center text-center">
@@ -310,7 +310,7 @@
        <div class="card bg-base-100 lg:w-96 shadow-xl space-y-4 w-full">
         <div class="avatar">
           <div class="ring-primary ring-offset-base-100 w-24 rounded-full ring ring-offset-2 mx-auto">
-            <img src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" />
+            <img src="images/others/user-3.png" />
           </div>
         </div>
         <div class="card-body items-center text-center">
@@ -339,6 +339,57 @@
 
 
        </div>
+
+
+       <!-- faQ section -->
+        <!-- container -->
+         <div class="flex flex-col lg:flex-col px-20 mb-24">
+          <!-- des -->
+           <h1 class="text-5xl font-bold mb-16 text-center">Frequently Asked <span class="text-[#E76F51]">Questions</span></h1>
+           <!-- left and right div both -->
+            <div class="grid lg:grid-cols-2 grid-cols-1">
+              <!-- left context -->
+               <div>
+                <img src="images/others/faq.png" alt="">
+               </div>
+
+               <!-- right context -->
+                <div>
+                  <div class="collapse collapse-arrow bg-base-200 lg:my-5 my-5">
+                    <input type="radio" name="my-accordion-2" />
+                    <div class="collapse-title text-xl font-medium lg:my-5 my-5">What are the most important things I should
+                      know about riding a bike?</div>
+                    <div class="collapse-content">
+                      <p>hello</p>
+                    </div>
+                  </div>
+                    <p class="my-4 lg:my-4 text-sm text-[#7E848C]">Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                    <!-- daisy compo will -->
+                    <div class="collapse collapse-arrow bg-base-200 lg:space-y-5 my-5">
+                      <input type="radio" name="my-accordion-2" checked="checked" />
+                      <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
+                      <div class="collapse-content">
+                        <p>hello</p>
+                      </div>
+                    </div>
+                    <div class="collapse collapse-arrow bg-base-200 lg:my-5 my-5">
+                      <input type="radio" name="my-accordion-2" />
+                      <div class="collapse-title text-xl font-medium lg:my-5 my-5">Click to open this one and close others</div>
+                      <div class="collapse-content">
+                        <p>hello</p>
+                      </div>
+                    </div>
+                    <div class="collapse collapse-arrow bg-base-200">
+                      <input type="radio" name="my-accordion-2" />
+                      <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
+                      <div class="collapse-content">
+                        <p>hello</p>
+                      </div>
+                    </div>
+                    
+                </div>
+            </div>
+         </div>
      </main>
 
     <!-- footer -->
